fixed spacing and added percentage

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -16,6 +16,7 @@
 .h2 {
   font-size: 60px;
   margin-left: 24px;
+  /* font-family: 'roboto'; */
 }
 
 .home {
@@ -42,7 +43,7 @@
 .imageContainer2 {
   /* display: 'flex'; */
   /* flex: 1; */
-  height: 200px;
+  height: 100px;
   /* background-color: yellow; */
   justify-content: 'center';
   align-items: 'center';
